# utcn-fa

./: .gitignore
common/: console.h
lab01/: direct_sort.cpp
lab02/: heap.cpp  heap.h  main.cpp
lab03/: avg.html  best.html  qsort_vs_hbqsort.html  quick_sort.cpp  quick_sort.h  threshold_finding.html  worst.html
lab04/: fixed_k.html  fixed_n.html  merge_lists.cpp  merge_lists.h
lab05/: CMakeLists.txt  fill_factor_effort_analysis.xlsx  hash_table.cpp  hash_table.h  main.cpp
lab06/: CMakeLists.txt  main.cpp  main.txt  trees.cpp  trees.h  trees.h.txt
lab07/: .clang-tidy  CMakeLists.txt  main.cpp  os_tree.cpp  os_tree.h  perf_chart.html
lab08/: CMakeLists.txt  graph.html  main.cpp  sets.cpp  sets.h
lab09/: CMakeLists.txt  bfs.cpp  bfs.h  main.cpp
lab09/.PVS-Studio/: depend_info.json
lab10/: CMakeLists.txt  dfs.cpp  dfs.h  graph.html  main.cpp
lab10/.PVS-Studio/: depend_info.json
